output_10.1.168/worker.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/worker.h-e86fa4.hip.

[HIPIFY] info: file './quda/include/worker.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 1
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 12
  TOTAL bytes: 173
  CHANGED lines of code: 2
  TOTAL lines of code: 14
  CODE CHANGED (in bytes) %: 7
  CODE CHANGED (in lines) %: 14
  TIME ELAPSED s: 0.20
[HIPIFY] info: CONVERTED refs by type:
  type: 1
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 1
[HIPIFY] info: CONVERTED refs by names:
  cudaStream_t: 1
